# kfr

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  KNOWNBUGS.md  README.md  azure-pipelines.yml  build-all-archs.py  build-cl.py  build.py  cmake-format.yaml  format-all.py  readme.md  sources.cmake  syntax-check.py  update-sources.py
.github/workflows/: build.yml  test.yml
capi/: CMakeLists.txt  capi.cpp
ci/: build_capi_win.cmd  llvm-linux.sh  run.cmd  run.sh
cmake/: aarch64.cmake  add_kfr_library.cmake  arm.cmake  config.cmake.in  detect_cpu.cmake  detect_cpu.cpp  kfrConfig.cmake.in  link_as_whole.cmake  macos-merge-binaries.cmake  riscv64.cmake  target_set_arch.cmake
cmake/test_toolset/: CMakeLists.txt
dft/: CMakeLists.txt
docs/: README.md  cxxdox.yml  mkdocs.yml
docs/docs/: basics.md  benchmarking.md  bq.md  bq_gallery.md  capi.md  clang.md  conv_reverb.md  conversion.md  convert_stereo.md  convolution.md  dft.md  dft2.md  dft_format.md  ebur128.md  expressions.md  file_support.md  fir.md  fir_gallery.md  iir.md  iir_gallery.md  index.md  installation.md  kb.md  normalize.md  plot.md  read_audio.md  src.md  (+10 more)
dspplot/: setup.py
examples/: CMakeLists.txt  biquads.cpp  ccv.cpp  dft.cpp  fir.cpp  iir.cpp  resampling.cpp  sample_rate_conversion.cpp  sample_rate_converter.cpp  window.cpp
src/audio/: CMakeLists.txt  aiff_coder.cpp  caff_coder.cpp  data.cpp  decoder.cpp  encoder.cpp  flac_coder.cpp  ieee.hpp  io.cpp  mf_coder.cpp  mp3_coder.cpp  raw_coder.cpp  riff.hpp  version.cpp  w64_coder.cpp  wave_coder.cpp
src/capi/: CMakeLists.txt  capi.cpp  dsp.cpp
src/dft/: CMakeLists.txt  bitrev.hpp  convolution-impl.cpp  dft-fft.hpp  dft-impl-f32.cpp  dft-impl-f64.cpp  dft-impl.hpp  dft-templates.hpp  dft.cpp  fft-impl-f32.cpp  fft-impl-f64.cpp  fft-impl.hpp  fft-templates.hpp  ft.hpp  version.cpp
src/dft/data/: bitrev.hpp  sincos.hpp
src/dsp/: CMakeLists.txt  biquad.cpp  fir.cpp  iir_design.cpp  sample_rate_conversion.cpp  speaker.cpp  version.cpp
src/io/: CMakeLists.txt  audiofile-impl.cpp  file.cpp  version.cpp
src/io/dr/: README.txt  dr_flac.h
tests/: CMakeLists.txt  all_tests.cpp  all_tests_merged.cpp  asm_test.cpp  audio_test.cpp  base_test.cpp  basic_vector_test.cpp  capi_test.cpp  complex_test.cpp  conv_test.cpp  dft_test.cpp  dsp_test.cpp  ebu_test.cpp  empty_test.cpp  expression_test.cpp  fracdelay_test.cpp  generate_data.cpp  intrinsic_test.cpp  io_test.cpp  multiarch.cpp  multiarch_fir_avx.cpp  multiarch_fir_sse2.cpp  numeric_tests.hpp  resampler_test.cpp  stat_test.cpp  tensor_test.cpp  test_output.py  transcendental_test.cpp  vec_test.cpp
tests/cmake/: FindGMP.cmake  FindMPFR.cmake
tests/data/: acos_double_fuzz  acos_double_narrow  acos_float_fuzz  acos_float_narrow  asin_double_fuzz  asin_double_narrow  asin_float_fuzz  asin_float_narrow  atan2_double_fuzz  atan2_double_narrow  atan2_float_fuzz  atan2_float_narrow  atan_double_fuzz  atan_double_narrow  atan_float_fuzz  atan_float_narrow  cbrt_double_fuzz  cbrt_double_narrow  cbrt_float_fuzz  cbrt_float_narrow  cos_double_fuzz  cos_double_narrow  cos_float_fuzz  cos_float_narrow  cosh_double_fuzz  cosh_double_narrow  cosh_float_fuzz  cosh_float_narrow  coth_double_fuzz  coth_double_narrow  coth_float_fuzz  coth_float_narrow  exp10_double_fuzz  exp10_double_narrow  exp10_float_fuzz  exp10_float_narrow  exp2_double_fuzz  exp2_double_narrow  exp2_float_fuzz  exp2_float_narrow  (+36 more)
tests/internal/: asm_test.cpp  generate_data.cpp
tests/mpfr/: mpfrplus.hpp
tests/npy/: 10x11-bool-v1-c-le.npy  10x11-bool-v1-f-le.npy  10x11-bool-v2-c-le.npy  10x11-bool-v2-f-be.npy  10x11-complex128-v1-c-be.npy  10x11-complex128-v1-c-le.npy  10x11-complex128-v1-f-be.npy  10x11-complex128-v1-f-le.npy  10x11-complex128-v2-c-be.npy  10x11-complex128-v2-c-le.npy  10x11-complex128-v2-f-be.npy  10x11-complex128-v2-f-le.npy  10x11-complex64-v1-c-be.npy  10x11-complex64-v1-c-le.npy  10x11-complex64-v1-f-be.npy  10x11-complex64-v1-f-le.npy  10x11-complex64-v2-c-be.npy  10x11-complex64-v2-c-le.npy  10x11-complex64-v2-f-be.npy  10x11-complex64-v2-f-le.npy  10x11-float32-v1-c-be.npy  10x11-float32-v1-c-le.npy  10x11-float32-v1-f-be.npy  10x11-float32-v1-f-le.npy  10x11-float32-v2-c-be.npy  10x11-float32-v2-c-le.npy  10x11-float32-v2-f-be.npy  10x11-float32-v2-f-le.npy  10x11-float64-v1-c-be.npy  10x11-float64-v1-c-le.npy  10x11-float64-v1-f-be.npy  10x11-float64-v1-f-le.npy  10x11-float64-v2-c-be.npy  10x11-float64-v2-c-le.npy  10x11-float64-v2-f-be.npy  10x11-float64-v2-f-le.npy  10x11-int16-v1-c-be.npy  10x11-int16-v1-c-le.npy  10x11-int16-v1-f-be.npy  10x11-int16-v1-f-le.npy  (+190 more)
tests/test-audio/: not_audio  sine.flac  testdata_2c.f32le  testdata_2c.s24be  testdata_2c_alac_s16.caf  testdata_2c_alac_s24.caf  testdata_2c_f32be.caf  testdata_2c_pcmf32be.aiff  testdata_2c_s16.aiff  testdata_2c_s16.caf  testdata_2c_s16.flac  testdata_2c_s16.w64  testdata_2c_s24.flac
tests/testo/: print_colored.hpp  testo.hpp
tests/unit/: cometa.cpp  meta.cpp  numeric_tests.hpp
tests/unit/base/: base.cpp  basic_expressions.cpp  conversion.cpp  fraction.cpp  generators.cpp  handle.cpp  math_expressions.cpp  npy.cpp  pointer.cpp  random.cpp  reduce.cpp  shape.cpp  simd_expressions.cpp  std_ambiguities.cpp  tensor.cpp  transpose.cpp  univector.cpp
tests/unit/dsp/: biquad.cpp  biquad_design.cpp  dcremove.cpp  delay.cpp  dsp.cpp  ebu.cpp  fir.cpp  goertzel.cpp  mixdown.cpp  oscillators.cpp  sample_rate_conversion.cpp  units.cpp  window.cpp
tests/unit/graphics/: color.cpp  geometry.cpp  graphics.cpp
tests/unit/io/: audiofile.cpp
tests/unit/math/: abs.cpp  asin_acos.cpp  atan.cpp  complex_math.cpp  hyperbolic.cpp  log_exp.cpp  math.cpp  min_max.cpp  round.cpp  select.cpp  sin_cos.cpp  sqrt.cpp  tan.cpp
tests/unit/simd/: abs.cpp  complex.cpp  logical.cpp  min_max.cpp  operators.cpp  round.cpp  saturation.cpp  select.cpp  shuffle.cpp  simd.cpp  vec.cpp
tests/usage-config/: CMakeLists.txt  kfr-app.cpp
tests/usage-manual/: CMakeLists.txt
tools/: CMakeLists.txt  ebu_test.cpp  sample_rate_converter.cpp
(+304 files in other folders)
